--- a/src/Microsoft.AspNetCore.OData/NewPlatform.Flexberry.AspNetCore.OData.nuspec
+++ b/src/Microsoft.AspNetCore.OData/NewPlatform.Flexberry.AspNetCore.OData.nuspec
@@ -23,8 +23,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="\netstandard2.0\Microsoft.AspNetCore.OData.dll" target="lib\netstandard2.0" />
-    <file src="\netstandard2.0\Microsoft.AspNetCore.OData.pdb" target="lib\netstandard2.0" />
-    <file src="\netstandard2.0\Microsoft.AspNetCore.OData.xml" target="lib\netstandard2.0" />
+    <file src="Microsoft.AspNetCore.OData.dll" target="lib\netstandard2.0\Microsoft.AspNetCore.OData.dll" />
+    <file src="Microsoft.AspNetCore.OData.xml" target="lib\netstandard2.0\Microsoft.AspNetCore.OData.xml" />
   </files>
 </package>
