--- a/test/UnitTest/Microsoft.AspNet.OData.Test/packages.config
+++ b/test/UnitTest/Microsoft.AspNet.OData.Test/packages.config
@@ -8,8 +8,8 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
-  <package id="Microsoft.OData.Core" version="7.5.0" targetFramework="net452" />
-  <package id="Microsoft.OData.Edm" version="7.5.0" targetFramework="net452" />
+  <package id="Microsoft.OData.Core-Debug" version="7.5.0-beta01" targetFramework="net452" />
+  <package id="Microsoft.OData.Edm-Debug" version="7.5.0-beta01" targetFramework="net452" />
   <package id="Microsoft.Spatial" version="7.5.0" targetFramework="net452" />
   <package id="Moq" version="4.7.137" targetFramework="net45" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net45" />
