--- a/Microsoft.AspNetCore.OData-Debug.nuspec
+++ b/Microsoft.AspNetCore.OData-Debug.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Microsoft.AspNetCore.OData-Debug</id>
-    <version>7.1.0-beta01</version>
+    <version>7.1.0-beta02</version>
     <title>Microsoft ASP.NET Core 2.0 for OData v4.0</title>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
@@ -19,7 +19,7 @@
       <group targetFramework=".NETStandard2.0">
         <dependency id="Microsoft.AspNetCore.Mvc.Core" version="[2.0.0, 3.0.0)" />
         <dependency id="Microsoft.Extensions.DependencyInjection" version="2.0.0" />
-        <dependency id="Microsoft.OData.Core-Debug" version="[7.5.0, 8.0.0)" />
+        <dependency id="Microsoft.OData.Core-Debug" version="[7.5.0-beta01, 8.0.0)" />
       </group>
     </dependencies>
   </metadata>
