--- a/src/Microsoft.AspNetCore.OData/Microsoft.AspNetCore.OData.csproj
+++ b/src/Microsoft.AspNetCore.OData/Microsoft.AspNetCore.OData.csproj
@@ -45,6 +45,9 @@
     <PackageReference Include="Microsoft.OData.Core" Version="7.7.3" />
     <PackageReference Include="Microsoft.OData.Edm" Version="7.7.3" />
     <PackageReference Include="Microsoft.Spatial" Version="7.7.3" />
+    <PackageReference Include="Microsoft.OData.Core" Version="7.7.2" />
+    <PackageReference Include="Microsoft.OData.Edm" Version="7.7.2" />
+    <PackageReference Include="Microsoft.Spatial" Version="7.7.2" />
   </ItemGroup>
 
   <ItemGroup>
