--- a/test/UnitTest/Microsoft.AspNetCore.OData.Test/Microsoft.AspNetCore.OData.Test.csproj
+++ b/test/UnitTest/Microsoft.AspNetCore.OData.Test/Microsoft.AspNetCore.OData.Test.csproj
@@ -19,10 +19,14 @@
     <PackageReference Include="Microsoft.OData.Core" Version="7.7.3" />
     <PackageReference Include="Microsoft.OData.Edm" Version="7.7.3" />
     <PackageReference Include="Microsoft.Spatial" Version="7.7.3" />
+    <PackageReference Include="Microsoft.OData.Core" Version="7.7.2" />
+    <PackageReference Include="Microsoft.OData.Edm" Version="7.7.2" />
+    <PackageReference Include="Microsoft.Spatial" Version="7.7.2" />
     <PackageReference Include="Moq" Version="4.7.137" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0' ">
@@ -36,10 +40,14 @@
     <PackageReference Include="Microsoft.OData.Core" Version="7.7.3" />
     <PackageReference Include="Microsoft.OData.Edm" Version="7.7.3" />
     <PackageReference Include="Microsoft.Spatial" Version="7.7.3" />
+    <PackageReference Include="Microsoft.OData.Core" Version="7.7.2" />
+    <PackageReference Include="Microsoft.OData.Edm" Version="7.7.2" />
+    <PackageReference Include="Microsoft.Spatial" Version="7.7.2" />
     <PackageReference Include="Moq" Version="4.7.137" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
