--- a/src/Microsoft.AspNetCore.OData/NewPlatform.Flexberry.AspNetCore.OData.nuspec
+++ b/src/Microsoft.AspNetCore.OData/NewPlatform.Flexberry.AspNetCore.OData.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>NewPlatform.Flexberry.AspNetCore.OData</id>
     <title>NewPlatform and Microsoft ASP.NET Core 2.0 for OData v4.0</title>
-    <version>7.5.1-beta01</version>
+    <version>7.5.1-beta02</version>
     <authors>Microsoft, New Platform</authors>
     <copyright>&#169; Microsoft Corporation, NewPlatform Ltd. All rights reserved. </copyright>
     <description>This package contains everything you need to create OData v4.0 endpoints using ASP.NET Core MVC and to support OData query syntax for your web APIs.</description>
@@ -20,10 +20,18 @@
         <dependency id="Microsoft.Extensions.DependencyInjection" version="2.0.0" />
         <dependency id="Microsoft.OData.Core" version="7.7.2" />
       </group>
+      <group targetFramework=".NETCoreApp3.1">
+        <dependency id="Newtonsoft.Json" version="10.0.3" />
+        <dependency id="Microsoft.OData.Core" version="7.7.2" />
+      </group>
     </dependencies>
   </metadata>
   <files>
-    <file src="Microsoft.AspNetCore.OData.dll" target="lib\netstandard2.0\Microsoft.AspNetCore.OData.dll" />
-    <file src="Microsoft.AspNetCore.OData.xml" target="lib\netstandard2.0\Microsoft.AspNetCore.OData.xml" />
+
+    <file src="src\Microsoft.AspNetCore.OData\bin\$configuration$\netstandard2.0\Microsoft.AspNetCore.OData.dll" target="lib\netstandard2.0\Microsoft.AspNetCore.OData.dll" />
+    <file src="src\Microsoft.AspNetCore.OData\bin\$configuration$\netstandard2.0\Microsoft.AspNetCore.OData.xml" target="lib\netstandard2.0\Microsoft.AspNetCore.OData.xml" />
+    <file src="src\Microsoft.AspNetCore.OData\bin\$configuration$\netcoreapp3.1\Microsoft.AspNetCore.OData.dll" target="lib\netcoreapp3.1\Microsoft.AspNetCore.OData.dll" />
+    <file src="src\Microsoft.AspNetCore.OData\bin\$configuration$\netcoreapp3.1\Microsoft.AspNetCore.OData.xml" target="lib\netcoreapp3.1\Microsoft.AspNetCore.OData.xml" />
+
   </files>
 </package>
